added publicity chair, Submit online , change in positions of elements in homepage

--- a/contact.html
+++ b/contact.html
@@ -137,7 +137,7 @@
 
                         <!-- Button Box -->
                         <div class="btn-box">
-                            <a href="buy-ticket.html" class="theme-btn btn-style-one"><span class="btn-title">Get Tickets</span></a>
+                            <a target="__blank" href="https://easychair.org/conferences/?conf=ssic2021" class="theme-btn btn-style-one"><span class="btn-title">Submit Online</span></a>
                         </div>
                     </div>
                 </div>
@@ -405,7 +405,7 @@
         <script src="js/map-script.js"></script>
         <!--End Google Map APi-->>
         <!-- End Footer -->
-        
+
 </body>
 <!-- Copied from https://expert-themes.com/html/eventrox/contact.html by Cyotek WebCopy 1.7.0.600, Thursday, September 19, 2019, 12:52:40 AM -->
 </html>
