--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
                         <!-- Button Box -->
                         <div class="btn-box">
-                            <a href="buy-ticket.html" class="theme-btn btn-style-one"><span class="btn-title">Get Tickets</span></a>
+                            <a target="__blank" href="https://easychair.org/conferences/?conf=ssic2021" class="theme-btn btn-style-one"><span class="btn-title">Submit Online</span></a>
                         </div>
                     </div>
                 </div>
@@ -166,7 +166,7 @@
     <!--End Main Header -->
     <!-- Banner Conference -->
     <section class="banner-conference">
-        <div class="layer-outer">
+        <div class="layer-outer" style="height:78%;">
             <div class="gradient-layer"></div>
         </div>
 
@@ -181,13 +181,35 @@
             <div class="content-box">
                 <span class="title">3<sup style="text-transform: lowercase">rd</sup> International Conference on</span>
                 <h2> Smart Systems:<br/>Innovations in<br/>Computing</h2>
-                <div class="time-counter"><div class="time-countdown clearfix" data-countdown="1/22/2021"></div></div>
                 <span class="title">22 - 23 January, 2021</span>
+                <figure class="image-box" style="margin-bottom: 60px;"><img src="images/springerhome.png" style="width:150px;" alt=""><a style="margin-top:10px;">&nbsp;&nbsp;&nbsp;(In talk with)</a></figure>
+                <div class="time-counter"><div class="time-countdown clearfix" data-countdown="1/22/2021"></div></div>
+
 <!--                <div class="btn-box"><a href="buy-ticket.html" class="theme-btn btn-style-two"><span class="btn-title">Book Now</span></a></div>-->
             </div>
         </div>
     </section>
     <!--End Banner Conference -->
+    <!--Clients Section-->
+    <section class="clients-section-two" style="background-image: url(images/background/9.jpg);">
+        <div class="auto-container">
+            <div class="sponsors-outer">
+                <div class="row">
+                    <!-- Client Block -->
+                    <div class="client-block col-lg-6 col-md-4 col-sm-6">
+                        <figure class="image-box"><a><img style=" margin-top: 22px;" src="images/springerhome.png" alt=""><br/>(In talk with)</a></figure>
+                        <figure class="image-box"><a href="#"><img style="height: 120px; margin: 12px;" src="images/speakers/logo-clg.jpg" alt=""><br/></a></figure>
+                    </div>
+                    <div class="client-block col-lg-6 col-md-4 col-sm-6">
+                        <figure class="image-box"><a href="#"><img style="width: 300px;max-height: 300px; margin-top:20px;" src="images/speakers/partners1.jpeg" alt=""><br/></a></figure>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--End Clients Section-->
+
 
     <!-- Features Section -->
     <section class="features-section">
@@ -807,81 +829,7 @@
     </section> -->
 
 
-        <!-- Event Info Section -->
-    <section class="event-info-section">
-        <div class="auto-container">
-            <div class="row">
-                <!-- Info Column -->
-                <div class="info-column col-lg-6 col-md-12 col-sm-12">
-                    <div class="inner-column">
-                        <div class="sec-title style-two">
-                            <span class="title">Reach us</span>
-                            <h2>Direction for  <br>Manipal University Jaipur</h2>
-                        </div>
 
-                        <div class="event-info-tabs tabs-box">
-                            <!--Tabs Box-->
-                            <ul class="tab-buttons clearfix">
-                                <li class="tab-btn active-btn" data-tab="#tab1">Time</li>
-                                <li class="tab-btn" data-tab="#tab2">Venue</li>
-                                <li class="tab-btn" data-tab="#tab3">How to</li>
-                            </ul>
-
-                            <div class="tabs-content">
-                                <!--Tab-->
-                                <div class="tab active-tab" id="tab1">
-                                    <h4><span class="icon far fa-calendar"></span> January 22, 2021</h4>
-                                    <div class="text">9.00 AM - 04.00 PM</div>
-                                    <ul class="info-list">
-                                        <li><span class="icon icon_profile"></span> Ankit Mundra</li>
-                                        <li><span class="icon icon_phone"></span> <a href="tel:+919667604115">+919667604115</a></li>
-                                        <li><span class="icon icon_mail"></span> <a href="mailto:ankit.mundra@muj.manipal.edu">ankit.mundra@muj.manipal.edu</a></li>
-                                    </ul>
-                                </div>
-
-                                <!--Tab-->
-                                <div class="tab" id="tab2">
-                                    <h4><span class="icon fa fa-map-marker-alt"></span>Manipal University Jaipur, Jaipur, Rajasthan</h4>
-                                    <div class="text">Jaipur-Ajmer Express Highway, Dehmi Kalan, Near GVK Toll Plaza, Jaipur, Rajasthan 303007</div>
-                                </div>
-
-                                <!--Tab-->
-                                <div class="tab" id="tab3">
-                                    <h4><span class="icon fa fa-directions"></span> How to get there</h4>
-                                    <!-- <div class="text">Click here to get the directions on google maps</div> -->
-                                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3559.877133205451!2d75.56304561457323!3d26.84385996951411!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x396c4850e05bee9b%3A0x1b8d67402d4eb863!2sManipal%20University%20Jaipur!5e0!3m2!1sen!2sin!4v1581143389721!5m2!1sen!2sin" width="480" height="100" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-
-                                </div>
-                                <!-- <div class="text">
-                                  </div> -->
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Image Column -->
-                <div class="image-column col-lg-6 col-md-12 col-sm-12">
-                    <figure class="image"><img src="images/icons/map-4.png" alt=""></figure>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!--End Event Info Section -->
-
-    <!--Clients Section-->
-    <section class="clients-section-two" style="background-image: url(images/background/9.jpg);">
-        <div class="auto-container">
-            <div class="sponsors-outer">
-                <div class="row">
-                    <!-- Client Block -->
-                    <div class="client-block col-xl-2 col-lg-3 col-md-4 col-sm-6">
-                        <figure class="image-box"><a href="#"><img src="images/springerhome.png" alt=""><br/>(In talk with)</a></figure>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!--End Clients Section-->
 
     <!-- Gallery Section -->
     <section class="gallery-section">
@@ -1057,6 +1005,66 @@
 <!--        </div>-->
 <!--    </section>-->
 <!--    &lt;!&ndash;End News Section &ndash;&gt;-->
+    <!-- Event Info Section -->
+    <section class="event-info-section">
+        <div class="auto-container">
+            <div class="row">
+                <!-- Info Column -->
+                <div class="info-column col-lg-6 col-md-12 col-sm-12">
+                    <div class="inner-column">
+                        <div class="sec-title style-two">
+                            <span class="title">Reach us</span>
+                            <h2>Direction for  <br>Manipal University Jaipur</h2>
+                        </div>
+
+                        <div class="event-info-tabs tabs-box">
+                            <!--Tabs Box-->
+                            <ul class="tab-buttons clearfix">
+                                <li class="tab-btn active-btn" data-tab="#tab1">Time</li>
+                                <li class="tab-btn" data-tab="#tab2">Venue</li>
+                                <li class="tab-btn" data-tab="#tab3">How to</li>
+                            </ul>
+
+                            <div class="tabs-content">
+                                <!--Tab-->
+                                <div class="tab active-tab" id="tab1">
+                                    <h4><span class="icon far fa-calendar"></span> January 22, 2021</h4>
+                                    <div class="text">9.00 AM - 04.00 PM</div>
+                                    <ul class="info-list">
+                                        <li><span class="icon icon_profile"></span> Ankit Mundra</li>
+                                        <li><span class="icon icon_phone"></span> <a href="tel:+919667604115">+919667604115</a></li>
+                                        <li><span class="icon icon_mail"></span> <a href="mailto:ankit.mundra@muj.manipal.edu">ankit.mundra@muj.manipal.edu</a></li>
+                                    </ul>
+                                </div>
+
+                                <!--Tab-->
+                                <div class="tab" id="tab2">
+                                    <h4><span class="icon fa fa-map-marker-alt"></span>Manipal University Jaipur, Jaipur, Rajasthan</h4>
+                                    <div class="text">Jaipur-Ajmer Express Highway, Dehmi Kalan, Near GVK Toll Plaza, Jaipur, Rajasthan 303007</div>
+                                </div>
+
+                                <!--Tab-->
+                                <div class="tab" id="tab3">
+                                    <h4><span class="icon fa fa-directions"></span> How to get there</h4>
+                                    <!-- <div class="text">Click here to get the directions on google maps</div> -->
+                                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3559.877133205451!2d75.56304561457323!3d26.84385996951411!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x396c4850e05bee9b%3A0x1b8d67402d4eb863!2sManipal%20University%20Jaipur!5e0!3m2!1sen!2sin!4v1581143389721!5m2!1sen!2sin" width="480" height="100" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+
+                                </div>
+                                <!-- <div class="text">
+                                  </div> -->
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Image Column -->
+                <div class="image-column col-lg-6 col-md-12 col-sm-12">
+                    <figure class="image"><img src="images/icons/map-4.png" alt=""></figure>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--End Event Info Section -->
 
     <!-- Subscribe Section -->
     <section class="subscribe-section">
