--- a/organizers.html
+++ b/organizers.html
@@ -145,7 +145,7 @@
 
                         <!-- Button Box -->
                         <div class="btn-box">
-                            <a target="__blank" href="buy-ticket.html" class="theme-btn btn-style-one"><span class="btn-title">Get Tickets</span></a>
+                            <a target="__blank" href="https://easychair.org/conferences/?conf=ssic2021" class="theme-btn btn-style-one"><span class="btn-title">Submit Online</span></a>
                         </div>
                     </div>
                 </div>
@@ -281,6 +281,60 @@
                         <div class="social-box">
                             <ul class="social-links social-icon-colored">
                                 <li><a target="__blank" href="https://jaipur.manipal.edu/muj/about-us/board-of-management/muj_registrar.html"><i class="fab fa-linkedin-in"></i></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- End Speakers Section -->
+    <!-- Speakers Section -->
+    <section class="speakers-section-two">
+        <div class="anim-icons">
+            <span class="icon icon-circle-4 wow zoomIn"></span>
+            <span class="icon icon-circle-3 wow zoomIn"></span>
+        </div>
+
+        <div class="auto-container">
+            <div class="sec-title text-center">
+                <span class="title">Organisers</span>
+                <h2>Publicity Chair(s)</h2>
+            </div>
+
+            <div class="row">
+
+                <!-- Speaker Block -->
+                <div class="speaker-block-two col-lg-6 col-md-6 col-sm-12 wow fadeInUp">
+                    <div class="inner-box height-fix">
+                        <div class="info-box">
+                            <h4 class="name"><a target="__blank" href="#">Nouby M Ghazaly</a></h4>
+                            <span class="designation">Head of Department of Mechanical Engineering at South Valley University-Qena</span>
+                        </div>
+                        <div class="image-box">
+                            <figure class="image"><a target="__blank" href="#"><img src="https://media-exp1.licdn.com/dms/image/C4D03AQEirKqwO90j5w/profile-displayphoto-shrink_200_200/0?e=1586995200&v=beta&t=TeM_YQv-X6-70TskMy_fbkRqfBho3R0uTknVp2VBrUs" alt=""></a></figure>
+                        </div>
+                        <div class="social-box">
+                            <ul class="social-links social-icon-colored">
+                                <li><a target="__blank" href="https://www.linkedin.com/in/nouby-ghazaly-21b38913/?originalSubdomain=eg"><i class="fab fa-linkedin-in"></i></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Speaker Block -->
+                <div class="speaker-block-two col-lg-6 col-md-6 col-sm-12 wow fadeInUp">
+                    <div class="inner-box height-fix">
+                        <div class="info-box">
+                            <h4 class="name"><a target="__blank" href="#">Lalit Garg</a></h4>
+                            <span class="designation">Senior Lecturer, Computer Information Systems at University of Malta</span>
+                        </div>
+                        <div class="image-box">
+                            <figure class="image"><a target="__blank" href="#"><img src="https://media-exp1.licdn.com/dms/image/C4E03AQEKWJyGdBt4Cw/profile-displayphoto-shrink_200_200/0?e=1586995200&v=beta&t=fPsln0rhcs1ZFhRTd0S40NzIWFkxvAcyJ4KccvT-s6c" alt=""></a></figure>
+                        </div>
+                        <div class="social-box">
+                            <ul class="social-links social-icon-colored">
+                                <li><a target="__blank" href="https://www.linkedin.com/in/drlalitgarg/"><i class="fab fa-linkedin-in"></i></a></li>
                             </ul>
                         </div>
                     </div>
