updated speakers and page titles

--- a/about-us.html
+++ b/about-us.html
@@ -3,7 +3,7 @@
 <!-- Copied from https://expert-themes.com/html/eventrox/about-us.html by Cyotek WebCopy 1.7.0.600, Thursday, September 19, 2019, 12:52:40 AM -->
 <head>
 <meta charset="utf-8">
-<title>Eventrox - Digital Events HTML Template | About Us</title>
+    <title>SSIC 2021 | Manipal University Jaipur</title>
 <!-- Stylesheets -->
 <link href="css/bootstrap.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
@@ -258,7 +258,7 @@
     <!-- Features Section Two -->
     <section class="features-section-two">
         <div class="auto-container">
-            <div class="anim-icons">   
+            <div class="anim-icons">
                 <span class="icon twist-line-1 wow zoomIn"></span>
                 <span class="icon twist-line-2 wow zoomIn" data-wow-delay="1s"></span>
                 <span class="icon twist-line-3 wow zoomIn" data-wow-delay="2s"></span>
@@ -458,7 +458,7 @@
                         </div>
                     </form>
                 </div>
-            </div> 
+            </div>
         </div>
     </section>
     <!--End Newsletter Section -->
