--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <!-- Copied from https://expert-themes.com/html/eventrox/contact.html by Cyotek WebCopy 1.7.0.600, Thursday, September 19, 2019, 12:52:40 AM -->
 <head>
     <meta charset="utf-8">
-    <title>Eventrox - Digital Events HTML Template | Contact Us</title>
+    <title>SSIC 2021 | Manipal University Jaipur</title>
     <!-- Stylesheets -->
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
