--- a/index.html
+++ b/index.html
@@ -319,61 +319,55 @@
             </div>
 
             <div class="row">
-
                 <!-- Speaker Block -->
-                <div class="speaker-block-two col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
+                <div class="speaker-block-three col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
                     <div class="inner-box">
+                        <div class="image-box">
+                            <figure class="image"><a target="_blank" href="http://class.ece.iastate.edu/arun/"><img src="images/speakers/dr.jpg" alt=""></a></figure>
+                        </div>
                         <div class="info-box">
-                            <h4 class="name"><a href="speakers-detail.html">Prof Arun K Somani</a></h4>
+                            <h4 class="name"><a target="_blank" href="http://class.ece.iastate.edu/arun/">Prof Arun K Somani</a></h4>
                             <span class="designation">Distinguished Professor & Associate Dean for Research, College of Engineering, IOWA University</span>
                         </div>
-                        <div class="image-box">
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/speakers/dr.jpg" alt=""></a></figure>
-                        </div>
                         <div class="social-box">
                             <ul class="social-links social-icon-colored">
-                                <li><a href="http://class.ece.iastate.edu/arun/"><i class="fab fa-linkedin-in"></i></a></li>
+                                <li><a target="_blank" href="http://class.ece.iastate.edu/arun/"><i class="fab fa-linkedin-in"></i></a></li>
                             </ul>
                         </div>
                     </div>
                 </div>
-
-                <!-- Speaker Block -->
-                <div class="speaker-block-two col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
+                <div class="speaker-block-three col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
                     <div class="inner-box">
+                        <div class="image-box">
+                            <figure class="image"><a target="_blank" href="https://www.linkedin.com/in/subhajitbhattacharya07/"><img src="https://media-exp1.licdn.com/dms/image/C5103AQEIbc_HBftVOQ/profile-displayphoto-shrink_200_200/0?e=1586390400&v=beta&t=N6ep9zsPf2F3A2mpZHyhtI22SjzDCzqHJ1N5GS0WnJ0" alt=""></a></figure>
+                        </div>
                         <div class="info-box">
-                            <h4 class="name"><a href="speakers-detail.html">Subhajit Bhattacharya</a></h4>
+                            <h4 class="name"><a target="_blank" href="https://www.linkedin.com/in/subhajitbhattacharya07/">Subhajit Bhattacharya</a></h4>
                             <span class="designation">Senior Program Manager - Innovation & Strategic Programs at Accenture</span>
                         </div>
-                        <div class="image-box">
-                            <figure class="image"><a href="speakers-detail.html"><img src="https://media-exp1.licdn.com/dms/image/C5103AQEIbc_HBftVOQ/profile-displayphoto-shrink_200_200/0?e=1586390400&v=beta&t=N6ep9zsPf2F3A2mpZHyhtI22SjzDCzqHJ1N5GS0WnJ0" alt=""></a></figure>
-                        </div>
                         <div class="social-box">
                             <ul class="social-links social-icon-colored">
-                                <li><a href="https://www.linkedin.com/in/subhajitbhattacharya07/"><i class="fab fa-linkedin-in"></i></a></li>
+                                <li><a target="_blank" href="https://www.linkedin.com/in/subhajitbhattacharya07/"><i class="fab fa-linkedin-in"></i></a></li>
                             </ul>
                         </div>
                     </div>
                 </div>
-
-                <!-- Speaker Block -->
-                <div class="speaker-block-two col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
+                <div class="speaker-block-three col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
                     <div class="inner-box">
+                        <div class="image-box">
+                            <figure class="image"><a target="_blank" href="https://www.linkedin.com/in/dr-priyadarsi-nanda-97489013/"><img src="images/speakers/Priyadarsi-Nanda.jpg" alt=""></a></figure>
+                        </div>
                         <div class="info-box">
-                            <h4 class="name"><a href="speakers-detail.html">Priyadarsi Nanda</a></h4>
+                            <h4 class="name"><a target="_blank" href="https://www.linkedin.com/in/dr-priyadarsi-nanda-97489013/">Priyadarsi Nanda</a></h4>
                             <span class="designation">Senior Lecturer at University of Technology Sydney</span>
                         </div>
-                        <div class="image-box">
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/speakers/Priyadarsi-Nanda.jpg" alt=""></a></figure>
-                        </div>
                         <div class="social-box">
                             <ul class="social-links social-icon-colored">
-                                <li><a href="https://www.linkedin.com/in/dr-priyadarsi-nanda-97489013/"><i class="fab fa-linkedin-in"></i></a></li>
+                                <li><a target="_blank" href="https://www.linkedin.com/in/dr-priyadarsi-nanda-97489013/"><i class="fab fa-linkedin-in"></i></a></li>
                             </ul>
                         </div>
                     </div>
                 </div>
-
             </div>
         </div>
     </section>
