--- a/coming-soon.html
+++ b/coming-soon.html
@@ -3,7 +3,7 @@
 <!-- Copied from https://expert-themes.com/html/eventrox/coming-soon.html by Cyotek WebCopy 1.7.0.600, Thursday, September 19, 2019, 12:52:40 AM -->
 <head>
 <meta charset="utf-8">
-<title>Eventrox - Digital Events HTML Template | Coming Soon</title>
+    <title>SSIC 2021 | Manipal University Jaipur</title>
 <!-- Stylesheets -->
 <link href="css/bootstrap.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
@@ -26,7 +26,7 @@
 <body>
 
 <div class="page-wrapper">
- 	
+
     <!-- Preloader -->
     <div class="preloader"></div>
  	<!-- Header span -->
@@ -46,7 +46,7 @@
                 <h1>Coming Soon</h1>
                 <div class="text">We are currently working on an awesome new site. Stay tuned for more information.<br> Subscribe to our newsletter to stay updated on our progress</div>
                 <div class="timer">
-                    <div class="cs-countdown clearfix" data-countdown="12/1/2019 05:06:59"></div>            
+                    <div class="cs-countdown clearfix" data-countdown="12/1/2019 05:06:59"></div>
                 </div>
                 <!--Emailed Form-->
                 <div class="emailed-form">
