--- a/speakers.html
+++ b/speakers.html
@@ -3,7 +3,7 @@
 <!-- Copied from https://expert-themes.com/html/eventrox/speakers.html by Cyotek WebCopy 1.7.0.600, Thursday, September 19, 2019, 12:52:40 AM -->
 <head>
 <meta charset="utf-8">
-<title>Eventrox - Digital Events HTML Template | Speakers</title>
+    <title>SSIC 2021 | Manipal University Jaipur</title>
 <!-- Stylesheets -->
 <link href="css/bootstrap.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
@@ -174,44 +174,68 @@
     </section>
     <!--End Page Title-->
 
-    <!-- Coming Soon -->
-    <section class="coming-soon">
-        <div class="anim-icons full-width">
-            <span class="icon icon-circle-blue wow fadeIn"></span>
-            <span class="icon icon-dots wow fadeInleft"></span>
-            <span class="icon icon-line-1 wow zoomIn"></span>
-            <span class="icon icon-circle-1 wow zoomIn"></span>
-        </div>
-
+    <!-- Speakers Section -->
+    <section class="speakers-section-three">
         <div class="auto-container">
-            <div class="content">
-                <!--                <div class="logo"><a href="index.html"><img style="width:50%;" src="images/logo_image.png" alt=""></a></div>-->
-                <h1>Coming Soon</h1>
-                <div class="text">Stay tuned for more information.<br> Subscribe to our newsletter to stay updated</div>
-                <div class="timer">
-                    <div class="cs-countdown clearfix" data-countdown="12/1/2019 05:06:59"></div>
-                </div>
-                <!--Emailed Form-->
-                <div class="emailed-form">
-                    <form method="post" action="contact.html">
-                        <div class="form-group">
-                            <input type="email" name="email" value="" placeholder="Enter your email" required="">
-                            <button type="submit" class="theme-btn"><i class="flaticon-arrow-pointing-to-right"></i></button>
+            <div class="sec-title text-center">
+                <span class="title">Speakers</span>
+                <h2>Todays Performers</h2>
+            </div>
+
+            <div class="row">
+                <!-- Speaker Block -->
+                <div class="speaker-block-three col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
+                    <div class="inner-box">
+                        <div class="image-box">
+                            <figure class="image"><a href="speakers-detail.html"><img src="images/speakers/dr.jpg" alt=""></a></figure>
                         </div>
-                    </form>
+                        <div class="info-box">
+                            <h4 class="name"><a href="speakers-detail.html">Prof Arun K Somani</a></h4>
+                            <span class="designation">Distinguished Professor & Associate Dean for Research, College of Engineering, IOWA University</span>
+                        </div>
+                        <div class="social-box">
+                            <ul class="social-links social-icon-colored">
+                                <li><a href="http://class.ece.iastate.edu/arun/"><i class="fab fa-linkedin-in"></i></a></li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
-                <div class="social-links">
-                    <ul class="social-icon-two social-icon-colored">
-                        <li><a href="#"><span class="fab fa-facebook-f"></span></a></li>
-                        <li><a href="#"><span class="fab fa-twitter"></span></a></li>
-                        <li><a href="#"><span class="fab fa-linkedin-in"></span></a></li>
-                        <!--                        <li><a href="#"><span class="fab fa-behance"></span></a></li>-->
-                        <!--                        <li><a href="#"><span class="fab fa-dribbble"></span></a></li>-->
-                    </ul>
+                <div class="speaker-block-three col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
+                    <div class="inner-box">
+                        <div class="image-box">
+                            <figure class="image"><a href="speakers-detail.html"><img src="https://media-exp1.licdn.com/dms/image/C5103AQEIbc_HBftVOQ/profile-displayphoto-shrink_200_200/0?e=1586390400&v=beta&t=N6ep9zsPf2F3A2mpZHyhtI22SjzDCzqHJ1N5GS0WnJ0" alt=""></a></figure>
+                        </div>
+                        <div class="info-box">
+                            <h4 class="name"><a href="speakers-detail.html">Subhajit Bhattacharya</a></h4>
+                            <span class="designation">Senior Program Manager - Innovation & Strategic Programs at Accenture</span>
+                        </div>
+                        <div class="social-box">
+                            <ul class="social-links social-icon-colored">
+                                <li><a href="https://www.linkedin.com/in/subhajitbhattacharya07/"><i class="fab fa-linkedin-in"></i></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="speaker-block-three col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
+                    <div class="inner-box">
+                        <div class="image-box">
+                            <figure class="image"><a href="speakers-detail.html"><img src="images/speakers/Priyadarsi-Nanda.jpg" alt=""></a></figure>
+                        </div>
+                        <div class="info-box">
+                            <h4 class="name"><a href="speakers-detail.html">Priyadarsi Nanda</a></h4>
+                            <span class="designation">Senior Lecturer at University of Technology Sydney</span>
+                        </div>
+                        <div class="social-box">
+                            <ul class="social-links social-icon-colored">
+                                <li><a href="https://www.linkedin.com/in/dr-priyadarsi-nanda-97489013/"><i class="fab fa-linkedin-in"></i></a></li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
+    <!-- End Speakers Section -->
 
     <!-- Main Footer -->
     <footer class="main-footer">
@@ -339,13 +363,16 @@
         <script src="js/popper.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
         <script src="js/jquery-ui.js"></script>
-        <script src="js/jquery.countdown.js"></script>
         <script src="js/jquery.fancybox.js"></script>
         <script src="js/appear.js"></script>
+        <script src="js/owl.js"></script>
         <script src="js/wow.js"></script>
         <script src="js/script.js"></script>
         <!-- Color Setting -->
         <script src="js/color-settings.js"></script>
+        <!--Google Map APi Key-->
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCPH8h1UpcK01BdcvoZeOzq-_wJqRxN1Pc"></script>
+        <script src="js/map-script.js"></script>
         <!--End Google Map APi-->>
     <!-- End Footer -->
 
