--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
                                         <li><a href="about-jaipur.html">About Jaipur</a></li>
                                     </ul>
                                 </li>
-                                <li class="dropdown"><a href="ssic.html">Call For</a>
+                                <li class="dropdown"><a href="papers.html">Call For</a>
                                     <ul>
-                                        <li><a href="ssic.html">Papers</a></li>
+                                        <li><a href="papers.html">Papers</a></li>
                                         <li><a href="ssic2019.html">Sessions</a></li>
                                         <li><a href="https://jaipur.manipal.edu/">Workshop</a></li>
                                         <li><a href="about-jaipur.html">Tutorial</a></li>
